fixed few css issue on mobile

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -27,7 +27,6 @@
   align-items: center;
   justify-content: center;
   .ring {
-    position: absolute;
     width: 10px;
     height: 10px;
     border-radius: 50%;
