--- a/src/styles/splash.scss
+++ b/src/styles/splash.scss
@@ -12,7 +12,7 @@
     height: 100px;
     border-radius: 50%;
     background: #fff;
-    position: absolute;
+    position: relative;
 
 
     // animation-name: disappear;
